Update app with new features including auth, credits, dashboard, and upload functionality

--- a/.env.local.example
+++ b/.env.local.example
@@ -6,6 +6,8 @@ SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 # NextAuth
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-nextauth-secret
+# App URL for password reset links
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Stripe
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
