--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@stripe/stripe-js": "^6.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.49.1",
+    "@supabase/supabase-js": "^2.49.3",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "@types/formidable": "^3.4.5",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.3",
     "axios-cookiejar-support": "^5.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
