--- a/vercel.json
+++ b/vercel.json
@@ -20,12 +20,39 @@
     "app/api/**/*.ts": {
       "memory": 1024,
       "maxDuration": 60
+    },
+    "app/api/upload-large/route.ts": {
+      "memory": 1024,
+      "maxDuration": 60
     }
   },
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/$1"
+      "source": "/music/:match*",
+      "destination": "/api/music/:match*"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,DELETE,PATCH,POST,PUT"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+        }
+      ]
     }
   ]
 } 
