Fix large file upload - Increase Vercel bodyLimit to 26MB and improve error handling for 413 errors

--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,8 @@
     },
     "app/api/upload-large/route.ts": {
       "memory": 1024,
-      "maxDuration": 60
+      "maxDuration": 60,
+      "bodyLimit": "26mb"
     }
   },
   "rewrites": [
