Fix large file upload config - Update Vercel and Next.js config for large file uploads

--- a/vercel.json
+++ b/vercel.json
@@ -23,8 +23,7 @@
     },
     "app/api/upload-large/route.ts": {
       "memory": 1024,
-      "maxDuration": 60,
-      "bodyLimit": "26mb"
+      "maxDuration": 60
     }
   },
   "rewrites": [
